K8sTestApp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: hello-app
    template:
       metadata:
          labels:
             app: hello-app
       spec:
          containers:
          - name: hello-dotnet6
            image: antizero58/k8stestapp:v2
            imagePullPolicy: Always
            ports:
              - name: web 
                containerPort: 80
